# typeswift

./: .gitignore  Cargo.toml  README.MD  build.rs
VoicySwift/: Package.resolved  libVoicySwift.dylib
VoicySwift/Sources/: VoicyFFI.swift  VoicyTranscriber.swift
app/: Cargo.toml  README.md  build.rs
app/VoicySwift/: Package.swift  README.md  build.sh
app/VoicySwift/Sources/: KeyboardFFI.swift  MenuBarFFI.swift  TypeswiftKeyboardMonitor.swift  VoicyFFI.swift  VoicyKeyboardMonitor.swift  VoicyMenuBar.swift  VoicyTranscriber.swift
app/VoicySwift/Sources/include/: VoicySwift.h
app/icons/: Typeswift.icns
app/src/: config.rs  controller.rs  error.rs  event_loop.rs  input.rs  keyboard_ffi.rs  lib.rs  main.rs  mem.rs  menubar_ffi.rs  output.rs  state.rs  streaming_manager.rs  window.rs
app/src/audio/: capture.rs  mod.rs  processor.rs  transcriber.rs
app/src/platform/: mod.rs
app/src/platform/macos/: ffi.rs
app/src/services/: audio.rs
app/tools/: bundle_macos.sh  make_icns.sh  makeicons.sh  rebuild.sh
src/: app.rs  audio.rs  audio_improved.rs  audio_recorder.rs  audio_stream.rs  config.rs  error.rs  event_loop.rs  input.rs  main.rs  main_reactive.rs  mlx.rs  output.rs  streaming_processor.rs  swift_ffi.rs  transcription.rs
src/audio/: processor.rs  stream_holder.rs  transcriber.rs
swift-coreml-test/: Package.swift  README.md  build_and_run.sh
swift-coreml-test/Sources/: ParakeetTranscriber.swift
web/: package.json
web/src/app/: globals.css  layout.tsx  page.tsx
