[package]
name = "voicy"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
enigo = "0.2"                                                 # For keyboard/mouse control
cocoa = "0.25"                                                # For macOS-specific APIs
objc = "0.2"                                                  # For Objective-C runtime
dispatch = "0.2"                                              # For Grand Central Dispatch
global-hotkey = "0.4"
anyhow = "1.0.99"
cpal = "0.16.0"
parking_lot = "0.12"
ringbuf = "0.4"
rubato = "0.16"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
once_cell = "1.19"
