[package]
name = "typeswift"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
enigo = "0.2"                                                 # For keyboard/mouse control
cocoa = "0.25"                                                # For macOS-specific APIs
objc = "0.2"                                                  # For Objective-C runtime
dispatch = "0.2"                                              # For Grand Central Dispatch
global-hotkey = "0.4"
anyhow = "1.0.99"
cpal = "0.16.0"
parking_lot = "0.12"
ringbuf = "0.4"
rubato = "0.16"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
once_cell = "1.19"

[package.metadata.bundle]
name = "Typeswift"
identifier = "com.typeswift.app"
icon = ["icons/Typeswift.icns"]
category = "public.app-category.productivity"
osx_minimum_system_version = "13.0"
osx_info_plist = { LSUIElement = true, NSMicrophoneUsageDescription = "Typeswift needs microphone access to transcribe speech." }
resources = ["menubar.png"]
